# filefinder

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: config.rs  ignore.rs  interactive.rs  main.rs  matcher.rs  output.rs  scanner.rs
