[package]
name = "filefinder"
version = "0.1.0"
edition = "2021"

[dependencies]
jwalk = "0.8"    # Parallel directory traversal (faster than walkdir)
num_cpus = "1"   # Get CPU count for jwalk parallelism
ignore = "=0.4.16"
rayon = "=1.8.0"
regex = "1"
glob = "=0.3.0"
clap = { version = "=4.5.0", features = ["derive"] }
parking_lot = "0.12"
anyhow = "1"
atty = "0.2"

[profile.release]
lto = true
opt-level = "s"
panic = "abort"
strip = true
codegen-units = 1
